# RAG_application

./: .gitignore  README.md  main.py  project_config.yaml  pyproject.toml
docs/: chunker_doc.md  indexer_doc.md  loader_doc.md  questions_answers_references.md
docs/analysis/: reranker_improvement.md
evals/: questions_advanced.csv
src/: __init__.py  rag_demo.py
src/helpers/: __init__.py  config.py
src/qabot/: __init__.py  indexer.py
src/qabot/api/: main.py
src/qabot/api/dependencies/: __init__.py  client.py
src/qabot/api/responses/: __init__.py  ask.py
src/qabot/api/routers/: __init__.py  ask.py  health.py  summarize.py
src/qabot/api/schemas/: __init__.py  schemas.py
src/qabot/evals/: eval.py  questions.csv
src/qabot/helpers/: __init__.py  config.py  logger.py  project_config.py
src/qabot/ingest/: __init__.py  chunker.py  loader.py
src/qabot/llm/: __init__.py  gateway.py  prompts.py
src/qabot/repository/: chunk_repository.py  document_repository.py  log_repository.py  models.py
src/qabot/schemas/: __init__.py  chunk.py  documents.py
src/qabot/search/: reranker.py  retriever.py
src/qabot/web/: app.py
src/schemas/: chunk.py
src/scripts/: cli_logs.py  docs_2_chunks.py  eval.py  rag_demo.py  repo_cli.py
tests/: test_chunker.py  test_log_repository.py  testing_bedrock.py
tests/unit/: test_chunker.py  test_hybrid_retriever.py  test_loader.py  test_log_repository.py  test_reranker.py
