[project]
name = "rag-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.40",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.118.0",
    "openai>=1.109.1",
    "pathlib>=1.0.1",
    "pydantic>=2.11.9",
    "pypdf2>=3.0.1",
    "pytest>=8.4.2",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "streamlit>=1.50.0",
    "transformers>=4.56.2",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

